<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif"
        android:text="@string/p5_titulo"
        android:textAlignment="center"
        android:textColor="@color/letra"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:text="@string/p5_datos"
        android:textColor="@color/border_oscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/border_registro_cita"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/editTextDni"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:autofillHints=""
            android:hint="@string/p5_placeh_dni"
            android:inputType="text|textPassword"
            android:textColorHighlight="@color/border"
            android:textColorHint="@color/border"
            android:textColorLink="@color/border"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border_registro_cita"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <EditText
            android:id="@+id/nombreInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:hint="@string/p5_placeh_nom"
            android:textColorHighlight="@color/border"
            android:textColorHint="@color/border"
            android:textColorLink="@color/border"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/apellidoInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:hint="@string/p5_placeh_ape"
            android:textColorHighlight="@color/border"
            android:textColorHint="@color/border"
            android:textColorLink="@color/border"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:hint="@string/p5_placeh_email"
            android:textColorHighlight="@color/border"
            android:textColorHint="@color/border"
            android:textColorLink="@color/border"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/telefonoInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:hint="@string/p5_placeh_tele"
            android:textColorHighlight="@color/border"
            android:textColorHint="@color/border"
            android:textColorLink="@color/border"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:hint="@string/p5_placeh_pass"
            android:textColorHighlight="@color/border"
            android:textColorHint="@color/border"
            android:textColorLink="@color/border"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/soft"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/p5_btn_registrar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />


</androidx.constraintlayout.widget.ConstraintLayout>