<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/p1_titulo"
            android:textColor="#132E31"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="227dp"
            android:layout_height="187dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/img1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/first_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:background="@drawable/border_login"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:hint="@string/p1_placeh_correo"
                android:inputType="text"
                android:singleLine="false"
                android:textAllCaps="true"
                android:textColorHighlight="@color/border"
                android:textColorHint="@color/border"
                android:textColorLink="@color/border"
                android:textSize="18sp">

            </EditText>

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/p1_placeh_contraseña"
                android:inputType="text|textPassword"
                android:textColorHighlight="@color/border"
                android:textColorHint="@color/border"
                android:textColorLink="@color/border"
                android:textSize="18sp">

            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/iniciarsesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:background="@drawable/rounded_btn"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:text="@string/p1_btn_inicio_sesion"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/rounded_btn_empty"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:text="@string/p1_btn_registrarse"
            android:textColor="@color/soft"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>