<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="48dp"
        android:layout_marginRight="110dp"
        android:fontFamily="sans-serif"
        android:text="@string/p3_titulo"
        android:textAlignment="center"
        android:textColor="#132E31"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:background="@color/soft"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:background="@color/white"
            android:hint="@string/p3_btn_especialidad"
            android:orientation="vertical"
            android:padding="10sp"
            android:textColorHint="@color/verde_oscuro">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_esp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:background="@color/white"
            android:hint="@string/p3_btn_medico"
            android:orientation="vertical"
            android:padding="10sp"
            android:textColorHint="@color/verde_oscuro">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:background="@color/white"
            android:hint="@string/p3_btn_horario"
            android:orientation="vertical"
            android:padding="10sp"
            android:textColorHint="@color/verde_oscuro">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_hor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:backgroundTint="@color/soft"
            android:text="Volver"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:backgroundTint="@color/soft"
            android:text="@string/p3_btn_reservar"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>